Adds team border

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,11 @@ body {
   padding-bottom: 200px;
 }
 
+.hero-image {
+  background-image: url("../img/hero/Header-img.jpg");
+  background-repeat: no-repeat;
+}
+
 /*Networks*/
 
 .network .link {
@@ -235,8 +240,8 @@ body {
 }
 
 .team .title {
+  margin-top: 0;
   margin-bottom: 10px;
-  margin-top: 30px;
   color: var(--title-text-color);
   text-align: center;
 
@@ -353,7 +358,17 @@ body {
   border-bottom: 1px solid var(--border-color);
 }
 
-.project-image {
+.team-border {
+  width: 270px;
+  border-right: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.image-block {
   display: block;
 }
 
