Adds some hovers

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --primary-background-color: #ffffff;
   --secondary-background-color: #f5f4fa;
   --border-color: #eeeeee;
+  --icon-color: #afb1b8;
 }
 
 body {
@@ -334,9 +335,34 @@ body {
   height: 44px;
 }
 
-.icon-network {
+.icon-network,
+.icon-footer {
   width: 20px;
   height: 20px;
+}
+
+.icon-footer {
+  fill: var(--white-text-color);
+}
+
+.icon-network {
+  fill: var(--icon-color);
+}
+
+.icon-network:hover {
+  fill: var(--white-text-color);
+}
+
+.item-network:hover {
+  background-color: var(--background-accent-color);
+}
+
+.clients-hover {
+  fill: var(--icon-color);
+}
+
+.clients-hover:hover {
+  fill: var(--accent-color);
 }
 
 .projects .title {
