--- a/css/styles.css
+++ b/css/styles.css
@@ -331,6 +331,7 @@ body {
 }
 
 .item-network {
+  display: block;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -345,7 +346,6 @@ body {
 
 .icon-footer {
   fill: var(--white-text-color);
-  text-align: center;
 }
 
 .icon-network {
